--- a/crudcrud/saveoncrud.html
+++ b/crudcrud/saveoncrud.html
@@ -136,6 +136,19 @@ header {
         // localStorage.setItem(email,JSON.stringify(obj))
         // showUserOnScreen(obj)
 }
+window.addEventListener("DOMContentLoaded",()=>{
+    axios.get("https://crudcrud.com/api/3187700c99434291bae5211716bd6d6f/appointmentData")    // network call // async
+        .then((response)=>{
+            console.log(response)
+            for(i=0;i<response.data.length;i++){
+                showUserOnScreen(response.data[i])
+            }
+        })
+        .catch((err)=>{
+            console.log(err)
+        })
+
+})
 function showUserOnScreen(obj){
   const parentElem=document.querySelector('#listOfItems')
   const childElem=document.createElement('li')
