--- a/crudcrud/saveoncrud.html
+++ b/crudcrud/saveoncrud.html
@@ -161,18 +161,18 @@ function showUserOnScreen(user){
   const parentNode=document.getElementById('listOfItems')
   const childHTML=`<li id=${user._id}> ${user.name} - ${user.email} 
                               <button onclick=deleteUser('${user._id}')> Delete USer</button>
-                                <button onclick=editUserDetails('${user._id}','${user.name}','${user.phonenumber}')> Edit User</button>
+                                <button onclick=editUserDetails('${user.email}','${user.name}','${user.phone}','${user._id}')> Edit User</button>
                     </li>`
 
   parentNode.innerHTML=parentNode.innerHTML+childHTML
 }
 
-  function editUserDetails(emailId,name, phonenumber){
+  function editUserDetails(emailId,name,phonenumber,userId){
     document.getElementById('email').value=emailId
     document.getElementById('username').value=name
     document.getElementById('phnno').value=phonenumber
 
-    deleteUser(emailId)
+    deleteUser(userId)
   }
 
 
